[gd_scene load_steps=3 format=3 uid="uid://b0hbkncbrkwle"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_fy38i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pikak"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_fy38i")

[node name="PlayerBody" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pikak")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
position_smoothing_enabled = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="GunHolder" type="Node2D" parent="."]
scale = Vector2(0.68, 0.32)

[node name="Gun" type="Polygon2D" parent="GunHolder"]
position = Vector2(10, 0)
color = Color(0.309804, 0.67451, 1, 1)
polygon = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
